# learnedbf

./: pyproject.toml  requirements.in  requirements.txt  test_slbf.ipynb  to_check_learnedBF.ipynb
.github/workflows/: python-publish.yml
learnedbf/: __init__.py
learnedbf/BF/: __init__.py
tests/: test_AdaBF.py  test_BloomFilter.py  test_ClassicalBloomFilter.py  test_LearnedBloomFilter.py  test_ScoredDT.py  test_ScoredLinearSVC.py  test_ScoredMLP.py  test_ScoredRF.py  test_UntrainedClassifiers.py
