[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "learnedbf"
authors = [
  { name="Dario Malchiodi", email="dario.malchiodi@unimi.it" },
]
description = "A python package for Learned Bloom Filters"
keywords = ["Bloom filters", "Learned Bloom filters", "machine learning"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "bitarray",
  "mmh3==3.0.0",
  "numpy==1.20",
  "pybloom_live=4.0.0",
  "problexity",
  "scikit-learn=1.7.3",
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dynamic = ['version']

[project.urls]
Homepage = "https://github.com/dariomalchiodi/learnedbf"
Documentation = "https://learnedbf.readthedocs.io/"
Issues = "https://github.com/dariomalchiodi/learnedbf/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "learnedbf.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
